Dev-RBI/src/objects/Payment_Plan_Details__c.object
<CustomObject>
    <fields>
        <fullName>Instalment_Number__c</fullName>
        <description>Stores the Instalment number for a Payment plan</description>
        <label>Instalment Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Plan__c</fullName>
        <description>Stores parent Payment Plan</description>
        <label>Payment Plan</label>
        <referenceTo>Payment_Plan__c</referenceTo>
        <relationshipLabel>Payment Plan Details</relationshipLabel>
        <relationshipName>Payment_Plan_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <description>Stores the % of amount that will be paid</description>
        <label>Payment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stage_Time__c</fullName>
        <description>Stores the stage/time when the payment will be made</description>
        <label>Stage / Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Payment Plan Details</label>
    <nameField>
        <displayFormat>PPD-{00000}</displayFormat>
        <label>Plan Details Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plan Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>